tests/snapshots/examples_fixtures/type_system__failing__203_hm_time_caller_missing_io_e400.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `log_event` requires effect `Console` in this function signature.

  examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx:31:5
   |
31 |     log_event("recorded")
   |     ^^^^^^^^^
   |     --------- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
